fix: removed the appearance of horizontal scroll

--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -31,7 +31,7 @@
   &::before,
   &::after {
     position: absolute;
-    width: calc((100vw - var(--container-width)) / 2);
+    width: var(--100vw);
     height: rem(1);
     background-color: var(--color-dark-15);
   }
