--- a/styles/helpers/_mixins.scss
+++ b/styles/helpers/_mixins.scss
@@ -60,7 +60,7 @@
 
     content: '';
     #{$property}: 0;
-    width: 100vw;
+    width: var(--100vw);
     height: rem(1);
     background-color: var(--color-dark-15);
   }
